공통 인풋 수정

--- a/src/html/benefit/SCR_GA_BN_0302_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0302_M01.html
@@ -21,43 +21,46 @@
                             
 							<div class="certi-form">
 								<div class="ip-wrap">
-									<div class="ip-group certy">
-										<div class="row">
-											<label for="ip01" class="ip-label">롯데 이메일 계정 인증</label>
-											<input id="ip01" type="email" class="ip-txt" placeholder="롯데 이메일 계정 입력">
-											<div class="line"></div>
+									<!-- 20220831 -->
+									<div class="ip-group">
+										<label for="ip01" class="ip-label">롯데 이메일 계정 인증</label>
+										<div class="row mail-certi">
+											<div class="module-ip">
+												<input id="ip01" type="email" class="ip-txt" placeholder="롯데 이메일 계정 입력">
+												<div class="line"></div>
+											</div>
+											<div class="mail-txt">
+												@lotte.net
+											</div>
 										</div>
 										<p class="error-txt">롯데 이메일 계정이 일치하지 않습니다</p>
-										<span class="mail-txt">
-											@lotte.net
-										</span>
 									</div>
+									<!-- //20220831 -->
 		
 									<div class="btn-group">
 										<button type="button" class="btn lg">인증코드 요청</button>
 										<!-- <button type="button" class="btn line lg">인증코드 재발송</button> -->
 									</div>
 									
-									<!-- 20220823 -->
-									<div class="ip-group certi">
+									<!-- 20220831 -->
+									<div class="ip-group">
 										<div class="row">
-											<input type="number" class="ip-txt">
-											<div class="line"></div>
-											<span class="icon-group">
+											<div class="module-ip">
+												<input type="number" class="ip-txt">
+												<div class="line"></div>
+											</div>
+											<div class="module-ico">
 												<button type="button" class="btn-del">
 													<i class="ico delete lg"></i>
 												</button>
 												<span class="time">3:00</span>
-											</span>
+											</div>
 										</div>
 										<p class="error-txt">인증코드가 일치하지 않습니다</p>
 									</div>
-									<!-- //20220823 -->
+									<!-- //20220831 -->
 								</div>
 							</div>
-							<p class="test">
-								tests
-							</p>
 
                             <ul class="list">
                                 <li>이메일 인증 후 임직원 쿠폰몰에 접속하실 수 있습니다.</li>
