--- a/src/html/ct/SCR_GA_CT_0602_P02.html
+++ b/src/html/ct/SCR_GA_CT_0602_P02.html
@@ -217,12 +217,21 @@
 			<div class="block">
 				<h3 class="title-sm">07. 그린카 사용후기(불만/만족)을 자유롭게 작성해주세요.</h3>
 				
+				<!-- 20220831 -->
 				<div class="ip-group first">
 					<div class="row">
-						<input type="text" class="ip-txt" placeholder="사용후기 입력">
-						<div class="line"></div>
+						<div class="module-ip">
+							<input id="ip01" type="text" class="ip-txt" placeholder="사용후기 입력">
+							<div class="line"></div>
+						</div>
+						<div class="module-ico">
+							<button type="button" class="btn-del">
+								<i class="ico delete lg"></i>
+							</button>
+						</div>
 					</div>
 				</div>
+				<!-- //20220831 -->
 			</div>
 
 			<div class="btn-wrap">
