--- a/src/html/customer/SCR_GA_CS_0101_M01.html
+++ b/src/html/customer/SCR_GA_CS_0101_M01.html
@@ -18,14 +18,19 @@
                             도움을 드리겠습니다.
                         </h3>
                         <div class="search-wrap">
-                            <div class="ip-group">
-                                <div class="row">
-                                    <i class="ico search lg"></i>
-                                    <input id="ip01" type="text" class="ip-txt" placeholder="검색어 입력" />
-                                    <div class="line"></div>
-                                </div>
-                                <p class="error-txt">비밀번호가 일치하지 않습니다</p>
-                            </div>
+							<!-- 20220831 -->
+							<div class="ip-group">
+								<div class="row">
+									<div class="module-ico">
+										<i class="ico search lg"></i>
+									</div>
+									<div class="module-ip">
+										<input id="ip01" type="text" class="ip-txt" placeholder="검색어 입력">
+										<div class="line"></div>
+									</div>
+								</div>
+							</div>
+							<!-- //20220831 -->
                         </div>
                         <div class="btn-tab">
                             <div class="scroll-area">
