--- a/src/html/customer/SCR_GA_CS_0401_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0401_M01_01.html
@@ -26,22 +26,23 @@
                             <div class="ip-textarea">
                                 <textarea name="" id="" cols="30" rows="10" placeholder="예시"></textarea>
                             </div>
-                            <div class="ip-group">
-                                <div class="row grid-flex">
-                                    <div class="gc-select">
-                                        <select name="" id="">
-                                            <option>지역선택</option>
+							<!-- 20220831 -->
+							<div class="ip-group">
+								<div class="row">
+									<div class="gc-select">
+										<select name="" id="">
+											<option>지역선택</option>
                                             <option>서울</option>
                                         </select>
                                     </div>
-                                    <input id="ip01" type="text" class="ip-txt" placeholder="" />
-                                    <!-- <button type="button" class="icon-group btn-del">
-                                <i class="ico delete md"></i>
-                            </button> -->
-                                    <div class="line"></div>
-                                </div>
-                                <p class="error-txt">비밀번호가 일치하지 않습니다</p>
-                            </div>
+									<div class="module-ip">
+										<input id="ip01" type="text" class="ip-txt" placeholder="">
+										<div class="line"></div>
+									</div>
+								</div>
+							</div>
+							<!-- //20220831 -->
+							
                             <div class="btn-group">
                                 <button type="button" class="btn green lg">조회</button>
                             </div>
