--- a/src/html/etc/SCR_GA_ER_0202_M01.html
+++ b/src/html/etc/SCR_GA_ER_0202_M01.html
@@ -15,31 +15,43 @@
 				<div class="ip-group">
 					<div class="row">
 						<label for="ip01" class="ip-label">이름</label>
-						<input type="text" id="ip01" class="ip-txt" placeholder="이름 입력">
-						<div class="line"></div>
-						<button type="button" class="icon-group btn-del">
-							<i class="ico delete lg"></i>
-						</button>
+						<div class="module-ip">
+							<input type="text" id="ip01" class="ip-txt" placeholder="이름 입력">
+							<div class="line"></div>
+						</div>
+						<div class="module-btn">
+							<button type="button" class="btn-del">
+								<i class="ico delete lg"></i>
+							</button>
+						</div>
 					</div>
 				</div>
 				<div class="ip-group">
 					<div class="row">
 						<label for="ip02" class="ip-label">연락처</label>
-						<input type="number" id="ip02" class="ip-txt" placeholder="연락처 입력">
-						<div class="line"></div>
-						<button type="button" class="icon-group btn-del">
-							<i class="ico delete lg"></i>
-						</button>
+						<div class="module-ip">
+							<input type="number" id="ip02" class="ip-txt" placeholder="연락처 입력">
+							<div class="line"></div>
+						</div>
+						<div class="module-btn">
+							<button type="button" class="btn-del">
+								<i class="ico delete lg"></i>
+							</button>
+						</div>
 					</div>
 				</div>
 				<div class="ip-group">
 					<div class="row">
 						<label for="ip03" class="ip-label">차량번호</label>
-						<input type="text" id="ip03" class="ip-txt" placeholder="차량번호 입력">
-						<div class="line"></div>
-						<button type="button" class="icon-group btn-del">
-							<i class="ico delete lg"></i>
-						</button>
+						<div class="module-ip">
+							<input type="text" id="ip03" class="ip-txt" placeholder="차량번호 입력">
+							<div class="line"></div>
+						</div>
+						<div class="module-btn">
+							<button type="button" class="btn-del">
+								<i class="ico delete lg"></i>
+							</button>
+						</div>
 					</div>
 				</div>
 				<div class="ip-group">
@@ -71,8 +83,10 @@
 				</div>
 				<div class="ip-group field">
 					<div class="row">
-						<input type="text" class="ip-txt" required="" placeholder="사유를 직접 입력해주세요 (15글자 내)">
-						<div class="line"></div>
+						<div class="module-ip">
+							<input type="text" class="ip-txt" required="" placeholder="사유를 직접 입력해주세요 (15글자 내)">
+							<div class="line"></div>
+						</div>
 					</div>
 				</div>
 				
