--- a/src/html/history/SCR_GA_HS_0201_P02.html
+++ b/src/html/history/SCR_GA_HS_0201_P02.html
@@ -8,17 +8,23 @@
 		<div class="history-notes">
 			<p class="desc">참고하실 내용을 메모하세요.</p>
 			<div class="ip-wrap">
-				<div class="ip-group box">
+				<!-- 20220831 -->
+				<div class="ip-group">
 					<div class="row">
-						<input type="text" class="ip-txt" placeholder="메모입력">
-						<button type="button" class="icon-group btn-del">
-							<!-- 20220826 -->
-							<i class="ico delete lg"></i>
-							<!-- //20220826 -->
-						</button>
-						<div class="line"></div>
+						<div class="module-ip">
+							<input type="text" class="ip-txt" placeholder="메모입력">
+							<div class="line"></div>
+						</div>
+						<div class="module-btn">
+							<button type="button" class="btn-del">
+								<!-- 20220826 -->
+								<i class="ico delete lg"></i>
+								<!-- //20220826 -->
+							</button>
+						</div>
 					</div>
 				</div>
+				<!-- //20220831 -->
 			</div>
 		</div>
 
