--- a/src/html/mypage/SCR_GA_CI_0801_P01.html
+++ b/src/html/mypage/SCR_GA_CI_0801_P01.html
@@ -23,16 +23,16 @@
 					<img src="/images/dumm/parking.png" alt="" />
 					<button class="btn icon lg"><i class="ico pic-delete xl3"></i></button>
 				</div>
+				<!-- 20220831 -->
                 <div class="ip-group">
-                    <div class="row">
-                        <input id="ip01" type="text" class="ip-txt" placeholder="메시지를 남겨주세요" />
-                        <!-- <button type="button" class="icon-group btn-del">
-						<i class="ico delete md"></i>
-					</button> -->
-                        <div class="line"></div>
+					<div class="row">
+						<div class="module-ip">
+							<input id="ip01" type="text" class="ip-txt" placeholder="메시지를 남겨주세요" />
+							<div class="line"></div>
+						</div>
                     </div>
-                    <p class="error-txt">비밀번호가 일치하지 않습니다</p>
                 </div>
+				<!-- //20220831 -->
             </section>
             <hr class="divider" />
             <section class="section">
