--- a/src/html/reservation/SCR_GA_RV_0206_T01.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T01.html
@@ -24,12 +24,18 @@
                             <section class="section">
                                 <!-- 20220818 -->
                                 <div class="section-cont">
-                                    <div class="ip-group unit">
-                                        <div class="row">
-                                            <input type="text" class="ip-txt" placeholder="쿠폰 번호 입력" />
-                                            <div class="line"></div>
+									<div class="ip-group">
+										<!-- 20220831 -->
+                                        <div class="row join">
+											<div class="module-ip">
+												<input type="text" class="ip-txt" placeholder="쿠폰 번호 입력" />
+												<div class="line"></div>
+											</div>
+											<div class="module-btn">
+												<button class="btn md">조회</button>
+											</div>
                                         </div>
-                                        <button class="btn md"><span class="text">조회</span></button>
+										<!-- //20220831 -->
                                     </div>
                                 </div>
                                 <!-- //20220818 -->
