--- a/src/html/reservation/SCR_GA_RV_0206_T03_2.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T03_2.html
@@ -54,13 +54,21 @@
 									</button>
 								</h3>
                                 <div class="section-cont">
-                                    <div class="ip-group unit">
-                                        <div class="row">
-                                            <input type="text" class="ip-txt point-input" value="-0P"/>
-											<div class="line"></div>
-                                        </div>
-										<button class="btn md"><span class="text">전액사용</span></button>
-                                    </div>
+									<!-- 20220831 -->
+									<div class="ip-wrap">
+										<div class="ip-group">
+											<div class="row join">
+												<div class="module-ip">
+													<input type="text" class="ip-txt point-input" value="-0P"/>
+													<div class="line"></div>
+												</div>
+												<div class="module-btn">
+													<button class="btn md">전액사용</button>
+												</div>
+											</div>
+										</div>
+									</div>
+									<!-- //20220831 -->
                                 </div>
 								<!-- //20220818 -->
                             </section>
