--- a/src/status.html
+++ b/src/status.html
@@ -326,7 +326,9 @@
                             <td><a target="_blank" class="througt" href="components/popup_module.html#member#SCR_GA_CA_0110_P02#full">SCR_GA_CA_0110_P02.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td>앱</td>
                         </tr>
                         <tr>
@@ -388,7 +390,8 @@
                             <td class="compl">07-08</td>
                             <td class="date">
 								20220818<br>
-								20220823
+								20220823<br>
+								20220831
 							</td>
                             <td></td>
                         </tr>
@@ -501,7 +504,12 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T01.html">SCR_GA_RV_0206_T01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date">20220818<br>20220819<br>20220823</td>
+                            <td class="date">
+								20220818<br>
+								20220819<br>
+								20220823<br>
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -557,7 +565,10 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_1.html">SCR_GA_RV_0206_T03_1.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date">20220818</td>
+                            <td class="date">
+								20220818<br>
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -571,7 +582,10 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_2.html">SCR_GA_RV_0206_T03_2.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date">20220818</td>
+                            <td class="date">
+								20220818<br>
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -585,7 +599,10 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_3.html">SCR_GA_RV_0206_T03_3.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date">20220818</td>
+                            <td class="date">
+								20220818<br>
+								20220831<br>
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -601,7 +618,8 @@
                             <td class="compl">07-18</td>
                             <td class="date">
 								20220818<br>
-								20220829
+								20220829<br>
+								20220831
 							</td>
                             <td></td>
                         </tr>
@@ -616,7 +634,10 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01_1.html">SCR_GA_RV_0207_M01_1.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date">20220818</td>
+                            <td class="date">
+								20220818<br>
+								20220831<br>
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -768,7 +789,9 @@
                             <td><a target="_blank" href="components/popup_module.html#ct#SCR_GA_CT_0602_P02#full">SCR_GA_CT_0602_P02.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
 						<tr>
@@ -850,7 +873,10 @@
                             <td><a target="_blank" href="components/popup_module.html#history#SCR_GA_HS_0201_P02">SCR_GA_HS_0201_P02.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date">20220826</td>
+                            <td class="date">
+								20220826<br>
+								20220831
+							</td>
                             <td></td>
                         </tr>
                     </tbody>
@@ -1073,7 +1099,8 @@
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date">
-								20220823
+								20220823<br>
+								20220831
 							</td>
                             <td></td>
                         </tr>
@@ -1116,7 +1143,10 @@
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0305_M01.html">SCR_GA_BN_0305_M01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date">20220819</td>
+                            <td class="date">
+								20220819<br>
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1423,7 +1453,9 @@
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0801_P01#full">SCR_GA_CI_0801_P01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1535,7 +1567,9 @@
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1201_P01">SCR_GA_CI_1201_P01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1549,7 +1583,9 @@
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1202_M01.html">SCR_GA_CI_1202_M01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1563,7 +1599,9 @@
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1301_T01.html">SCR_GA_CI_1301_T01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1591,7 +1629,9 @@
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1302_T02.html">SCR_GA_CI_1302_T02.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1701,7 +1741,9 @@
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0101_M01.html">SCR_GA_CS_0101_M01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1771,7 +1813,9 @@
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0301_M01.html">SCR_GA_CS_0301_M01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1785,7 +1829,9 @@
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0301_M01_01.html">SCR_GA_CS_0301_M01_01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1799,7 +1845,9 @@
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0301_M01_02.html">SCR_GA_CS_0301_M01_02.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1841,7 +1889,9 @@
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0401_M01.html">SCR_GA_CS_0401_M01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1855,7 +1905,9 @@
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0401_M01_01.html">SCR_GA_CS_0401_M01_01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1897,7 +1949,9 @@
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0502_M01.html">SCR_GA_CS_0502_M01.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220831
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -2673,7 +2727,9 @@
 							<td><a target="_blank" href="components/popup_module.html#etc#SCR_GA_ER_0202_M01#bottom">SCR_GA_ER_0202_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
-                            <td class="compl"></td>
+                            <td class="compl">
+								20220831
+							</td>
 							<td></td>
 						</tr>
 						<tr>
