--- a/src/html/customer/SCR_GA_CS_0502_M01.html
+++ b/src/html/customer/SCR_GA_CS_0502_M01.html
@@ -53,78 +53,95 @@
                         <section>
                             <h4>법인/단체정보 입력</h4>
                             <form>
-                                <div class="ip-group">
-                                    <div class="row">
-                                        <label for="ip01" class="ip-label">법인/단체명</label>
-                                        <input id="ip01" type="text" class="ip-txt" placeholder="법인/단체명을 입력해주세요" />
-                                        <div class="line"></div>
-                                    </div>
-                                </div>
-                                <div class="ip-group">
-                                    <div class="row">
-                                        <label for="ip01" class="ip-label">대표자명</label>
-                                        <input id="ip01" type="text" class="ip-txt" placeholder="대표자명을 입력해주세요" />
-                                        <div class="line"></div>
-                                    </div>
-                                </div>
-                                <div class="ip-group">
-                                    <label for="ip01" class="ip-label">사업자번호</label>
-                                    <div class="ip-inner">
-                                        <div class="row">
-                                            <input id="ip01" type="text" class="ip-txt" placeholder="‘-’하이픈없이 입력해주세요" />
-                                            <div class="line"></div>
-                                        </div>
-                                        <button type="button" class="btn md">가입여부</button>
-                                    </div>
-                                </div>
-                                <div class="ip-group">
-                                    <label for="ip01" class="ip-label">사업자등록증 (고유번호증)</label>
-                                    <div class="ip-inner">
-                                        <div class="row">
-                                            <input id="ip01" type="text" class="ip-txt" placeholder="등록된 파일명" />
-                                            <div class="line"></div>
-                                        </div>
-                                        <button type="button" class="btn md">첨부</button>
-                                    </div>
-                                    <div class="input-desc">
-                                        <p>※ jpg, png, gif, bmp 형태의 이미지를 업로드해주세요.</p>
-                                        <p>※ 파일명에 마침표(.)가 포함된 경우 업로드가 불가합니다</p>
-                                    </div>
-                                </div>
-                                <div class="ip-group">
-                                    <label for="ip01" class="ip-label">법인/단체 주소</label>
-                                    <div class="ip-inner">
-                                        <div class="row">
-                                            <input id="ip01" type="text" class="ip-txt" placeholder="주소검색 후  선택 값 표기" />
-                                            <div class="line"></div>
-                                        </div>
-                                        <button type="button" class="btn md">주소검색</button>
-                                    </div>
-                                    <div class="ip-inner">
-                                        <div class="row">
-                                            <input id="ip01" type="text" class="ip-txt" placeholder="상세주소(입력)" />
-                                            <div class="line"></div>
-                                        </div>
-                                    </div>
-                                    <div class="input-desc">
-                                        <p>※법인/단체 관련 우편물을 수신할 수 있는 주소를 입력하세요.
-                                        </p>
-                                    </div>
-                                </div>
+								<!-- 20220831 -->
+								<div class="ip-wrap">
+									<div class="ip-group">
+										<label for="ip01" class="ip-label">법인/단체명</label>
+										<div class="row">
+											<div class="module-ip">
+												<input id="ip01" type="text" class="ip-txt" placeholder="법인/단체명을 입력해주세요">
+												<div class="line"></div>
+											</div>
+										</div>
+									</div>
+									<div class="ip-group">
+										<label for="ip02" class="ip-label">대표자명</label>
+										<div class="row">
+											<div class="module-ip">
+												<input id="ip02" type="text" class="ip-txt" placeholder="대표자명을 입력해주세요">
+												<div class="line"></div>
+											</div>
+										</div>
+									</div>
+									<div class="ip-group">
+										<label for="ip03" class="ip-label">사업자번호</label>
+										<div class="row join">
+											<div class="module-ip">
+												<input id="ip03" type="text" class="ip-txt" placeholder="‘-’하이픈없이 입력해주세요">
+												<div class="line"></div>
+											</div>
+											<div class="module-btn">
+												<button class="btn md">가입여부</button>
+											</div>
+										</div>
+									</div>
+									<div class="ip-group">
+										<label for="ip04" class="ip-label">사업자등록증 (고유번호증)</label>
+										<div class="row join">
+											<div class="module-ip">
+												<input id="ip04" type="text" class="ip-txt" placeholder="등록된 파일명">
+												<div class="line"></div>
+											</div>
+											<div class="module-btn">
+												<button class="btn md">첨부</button>
+											</div>
+										</div>
+										<div class="input-desc">
+											<p>※ jpg, png, gif, bmp 형태의 이미지를 업로드해주세요.</p>
+											<p>※ 파일명에 마침표(.)가 포함된 경우 업로드가 불가합니다</p>
+										</div>
+									</div>
+								</div>
+								<!-- //20220831 -->
+                                
+
+								<!-- 20220831 -->
+								<div class="ip-group">
+									<label for="ip05" class="ip-label">법인/단체 주소</label>
+									<div class="row join">
+										<div class="module-ip">
+											<input id="ip05" type="text" class="ip-txt" placeholder="주소검색 후  선택 값 표기">
+											<div class="line"></div>
+										</div>
+										<div class="module-btn">
+											<button class="btn md">주소검색</button>
+										</div>
+									</div>
+									<div class="row">
+										<div class="module-ip">
+											<input id="ip06" type="text" class="ip-txt" placeholder="상세주소(입력)">
+											<div class="line"></div>
+										</div>
+									</div>
+								</div>
+								<!-- //20220831 -->
                             </form>
                         </section>
                         <hr class="divider" />
                         <section>
                             <h4>법인/단체 계정정보</h4>
+							<!-- 20220831 -->
                             <div class="ip-group">
-                                <label for="ip01" class="ip-label">관리자아이디</label>
-                                <div class="ip-inner">
-                                    <div class="row">
-                                        <input id="ip01" type="text" class="ip-txt" placeholder="아이디를 입력해 주세요" />
-                                        <div class="line"></div>
-                                    </div>
-                                    <button type="button" class="btn md">중복확인</button>
-                                </div>
+                                <label for="ip06" class="ip-label">관리자아이디</label>
+								<div class="row join">
+									<div class="module-ip">
+										<input id="ip06" type="text" class="ip-txt" placeholder="아이디를 입력해 주세요" />
+										<div class="line"></div>
+									</div>
+									<div class="module-btn">
+										<button type="button" class="btn md">중복확인</button>
+									</div>
+								</div>
                                 <div class="input-desc">
                                     <p>※6~12자의 영문(소문자)와 숫자</p>
                                     <p class="text-green">※관리자 아이디는 차량예약을 할 수 없습니다.</p>
@@ -132,48 +149,60 @@
                             </div>
                             <div class="ip-group">
                                 <div class="row">
-                                    <label for="ip01" class="ip-label">비밀번호</label>
-                                    <input id="ip01" type="text" class="ip-txt" placeholder="8~15자 영문 대소문자, 숫자, 특수문자 조합" />
-                                    <div class="line"></div>
+									<label for="ip07" class="ip-label">비밀번호</label>
+									<div class="module-ip">
+										<input id="ip07" type="text" class="ip-txt" placeholder="8~15자 영문 대소문자, 숫자, 특수문자 조합" />
+										<div class="line"></div>
+									</div>
                                 </div>
                             </div>
                             <div class="ip-group">
                                 <div class="row">
-                                    <label for="ip01" class="ip-label">비밀번호 확인</label>
-                                    <input id="ip01" type="text" class="ip-txt" placeholder="8~15자 영문 대소문자, 숫자, 특수문자 조합" />
-                                    <div class="line"></div>
+									<label for="ip08" class="ip-label">비밀번호 확인</label>
+									<div class="module-ip">
+										<input id="ip08" type="text" class="ip-txt" placeholder="8~15자 영문 대소문자, 숫자, 특수문자 조합" />
+										<div class="line"></div>
+									</div>
                                 </div>
                             </div>
+							<!-- // 20220831 -->
                         </section>
                         <hr class="divider" />
                         <section>
                             <h4>법인/단체 관리자 정보</h4>
                             <form action="">
+								<!-- 20220831 -->
                                 <div class="ip-group">
-                                    <label for="ip01" class="ip-label">관리자연락처</label>
-                                    <div class="ip-inner">
-                                        <div class="row">
-                                            <input id="ip01" type="text" class="ip-txt" placeholder="‘-’ 없이 입력해주세요
-                                            " />
-                                            <div class="line"></div>
-                                        </div>
-                                        <button type="button" class="btn md">인증하기</button>
+                                    <label for="ip08" class="ip-label">관리자연락처</label>
+									<div class="row join">
+										<div class="module-ip">
+											<input id="ip08" type="text" class="ip-txt" placeholder="‘-’ 없이 입력해주세요" />
+											<div class="line"></div>
+										</div>
+										<div class="module-btn">
+											<button type="button" class="btn md">인증하기</button>
+										</div>
+									</div>
+                                </div>
+                                <div class="ip-group">
+                                    <div class="row">
+										<label for="ip01" class="ip-label">담당부서</label>
+										<div class="module-ip">
+											<input id="ip01" type="text" class="ip-txt" placeholder="담당부서 입력" />
+											<div class="line"></div>
+										</div>
                                     </div>
                                 </div>
                                 <div class="ip-group">
                                     <div class="row">
-                                        <label for="ip01" class="ip-label">담당부서</label>
-                                        <input id="ip01" type="text" class="ip-txt" placeholder="담당부서 입력" />
-                                        <div class="line"></div>
+										<label for="ip09" class="ip-label">관리자이메일</label>
+										<div class="module-ip">
+											<input id="ip09" type="text" class="ip-txt" placeholder="담당부서 입력" />
+											<div class="line"></div>
+										</div>
                                     </div>
                                 </div>
-                                <div class="ip-group">
-                                    <div class="row">
-                                        <label for="ip01" class="ip-label">관리자이메일</label>
-                                        <input id="ip01" type="text" class="ip-txt" placeholder="담당부서 입력" />
-                                        <div class="line"></div>
-                                    </div>
-                                </div>
+								<!-- //20220831 -->
                             </form>
                             <div class="agree-group">
                                 <div class="agree-module mt24">
