--- a/src/html/mypage/SCR_GA_CI_1201_P01.html
+++ b/src/html/mypage/SCR_GA_CI_1201_P01.html
@@ -8,15 +8,21 @@
 		<div class="history-notes">
 			<p class="desc">국민카드 5272</p>
 			<div class="ip-wrap">
-				<div class="ip-group box">
+				<!-- 20220831 -->
+				<div class="ip-group">
 					<div class="row">
-						<input type="text" class="ip-txt" placeholder="6자 이내">
-						<button type="button" class="icon-group btn-del">
-							<i class="ico delete lg"></i>
-						</button>
-						<div class="line"></div>
+						<div class="module-ip">
+							<input type="text" class="ip-txt" placeholder="6자 이내">
+							<div class="line"></div>
+						</div>
+						<div class="module-btn">
+							<button type="button" class="btn-del">
+								<i class="ico delete lg"></i>
+							</button>
+						</div>
 					</div>
 				</div>
+				<!-- //20220831 -->
 			</div>
 		</div>
 
