--- a/src/html/mypage/SCR_GA_CI_1302_T02.html
+++ b/src/html/mypage/SCR_GA_CI_1302_T02.html
@@ -48,33 +48,39 @@
 								</div>
 	
 								<div class="ip-wrap">
-									<div class="ip-group card">
-										<div class="row">
-											<label for="card" class="ip-label">카드번호 입력</label>
-											<div class="ip-card-module">
+									<!-- 20220831 -->
+									<div class="ip-group">
+										<label for="card" class="ip-label">카드번호 입력</label>
+										<div class="row card">
+											<div class="module-ip">
 												<input id="card" type="text" class="ip-txt" data-pos="1" placeholder="1234" value="1234" maxlength="4">
 												<input type="text" class="ip-txt" data-pos="2" placeholder="0000" maxlength="4">
 												<input type="text" class="ip-txt" data-pos="3" placeholder="0000" maxlength="4">
 												<input type="text" class="ip-txt" data-pos="4" placeholder="0000" maxlength="4">
 												<div class="line"></div>
-												<button type="button" class="icon-group btn-del">
+											</div>
+											<div class="module-ico">
+												<button type="button" class="btn-del">
 													<i class="ico delete lg"></i>
 												</button>
 											</div>
 										</div>
 									</div>
 									<div class="ip-group">
+										<label for="fakePassword" class="ip-label">비밀번호</label>
 										<div class="row">
-											<label for="fakePassword" class="ip-label">비밀번호</label>
-											<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 6자리">
-											<div class="line"></div>
-											<span class="icon-group">
+											<div class="module-ip">
+												<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 6자리">
+												<div class="line"></div>
+											</div>
+											<div class="module-ico">
 												<button id="toggler" type="button" class="ip-icon active">
 													<i class="ico eye-on lg"></i>
 												</button>
-											</span>
+											</div>
 										</div>
 									</div>
+									<!-- //20220831 -->
 								</div>
 							</div>
 	
