--- a/src/html/reservation/SCR_GA_RV_0201_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0201_M01.html
@@ -134,17 +134,19 @@
 								<div class="title-area">
 									<h3 class="title-xs">포인트</h3>
 								</div>
-								<div class="grid-flex ip-group">
-									<div class="flex col-7">
-										<div class="row">
+								<!-- 20220831 -->
+								<div class="ip-group">
+									<div class="row join">
+										<div class="module-ip">
 											<input type="text" class="ip-txt" title="포인트" value="10 원">
 											<div class="line"></div>
 										</div>
-									</div>
-									<div class="flex col-3">
-										<button type="button" class="btn md full">전액사용</button>
+										<div class="module-btn">
+											<button type="button" class="btn md">전액사용</button>
+										</div>
 									</div>
 								</div>
+								<!-- //20220831 -->
 
 								<div class="grid-flex green-point">
 									<div class="flex col-3">그린포인트</div>
