--- a/src/html/reservation/SCR_GA_RV_0206_T03_1.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T03_1.html
@@ -56,13 +56,21 @@
 									<!-- //20220818 -->
 								</h3>
                                 <div class="section-cont">
-                                    <div class="ip-group unit">
-                                        <div class="row">
-                                            <input type="text" class="ip-txt" placeholder="비밀번호 6자리">
-											<div class="line"></div>
-                                        </div>
-										<button class="btn md"><span class="text">조회</span></button>
-                                    </div>
+									<!-- 20220831 -->
+									<div class="ip-wrap">
+										<div class="ip-group">
+											<div class="row join">
+												<div class="module-ip">
+													<input type="text" class="ip-txt" placeholder="비밀번호 6자리">
+													<div class="line"></div>
+												</div>
+												<div class="module-btn">
+													<button class="btn md">조회</button>
+												</div>
+											</div>
+										</div>
+									</div>
+									<!-- //20220831 -->
                                 </div>
                             </section>
                             <section class="section point-use">
