--- a/src/html/reservation/SCR_GA_RV_0207_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0207_M01.html
@@ -34,17 +34,19 @@
 								</h3>
 								<div class="card-number">
 									<div class="ip-wrap">
+										<!-- 20220831 -->
 										<div class="ip-group">
-											<div class="row">
-												<label for="card" class="ip-label">카드번호</label>
-												<div class="ip-card-module">
-													<input id="card" type="text" class="ip-txt" data-pos="1" placeholder="1234" value="1234" maxlength='4'>
-													<input type="text" class="ip-txt" data-pos="2" placeholder="0000" maxlength='4'>
-													<input type="text" class="ip-txt" data-pos="3" placeholder="0000" maxlength='4'>
-													<input type="text" class="ip-txt" data-pos="4" placeholder="0000" maxlength='4'>
+											<label for="card" class="ip-label">카드번호</label>
+											<div class="row card">
+												<div class="module-ip">
+													<input id="card" type="text" class="ip-txt" data-pos="1" placeholder="1234" value="1234" maxlength="4">
+													<input type="text" class="ip-txt" data-pos="2" placeholder="0000" maxlength="4">
+													<input type="text" class="ip-txt" data-pos="3" placeholder="0000" maxlength="4">
+													<input type="text" class="ip-txt" data-pos="4" placeholder="0000" maxlength="4">
 													<div class="line"></div>
-													<button type="button" class="icon-group btn-del">
-														<!-- 20220829 -->
+												</div>
+												<div class="module-ico">
+													<button type="button" class="btn-del">
 														<i class="ico delete lg"></i>
 													</button>
 												</div>
@@ -52,18 +54,20 @@
 										</div>
 			
 										<div class="ip-group">
+											<label for="fakePassword" class="ip-label">비밀번호</label>
 											<div class="row">
-												<label for="fakePassword" class="ip-label">비밀번호</label>
-												<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 6자리">
-												<div class="line"></div>
-												<span class="icon-group">
+												<div class="module-ip">
+													<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 6자리">
+													<div class="line"></div>
+												</div>
+												<div class="module-ico">
 													<button id="toggler" type="button" class="ip-icon">
 														<i class="ico eye-on md"></i>
 													</button>
-												</span>
+												</div>
 											</div>
-											<p class="error-txt">비밀번호가 일치하지 않습니다</p>
 										</div>
+										<!-- //20220831 -->
 									</div>
 								</div>
                             </section>
